Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyhostpath
  annotations:
    description: Запрещает тома hostPath.
spec:
  crd:
    spec:
      names:
        kind: K8sDenyHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyhostpath

        violation[{"msg": msg}] {
          v := input.review.object.spec.volumes[_]
          v.hostPath
          msg := sprintf("том %v монтирует каталог узла через hostPath: %v", [v.name, v.hostPath.path])
        }
